# mega-plays

./: Cargo.toml  README.md
.github/workflows/: ci.yml
apps/pong/: Cargo.toml
apps/pong/src/: main.rs
crates/mega-plays/: Cargo.toml
crates/mega-plays/src/: agent.rs  app.rs  game.rs  lib.rs  stats.rs
crates/mega-pong/: Cargo.toml
crates/mega-pong/src/: lib.rs
docs/: profiling.md
src/: agent.rs  app.rs  game.rs  lander.rs  lib.rs  pong.rs  profiling.rs  stats.rs
