[package]
name = "mega-plays"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/kvark/mega-plays"
authors = ["Dzmitry Malyshau"]
description = "Live-learning game demos built on Blade and Meganeura."

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[dependencies]
# Pinned exactly to meganeura 0.2.0's blade-graphics dep. Bumping either
# side requires bumping both in lockstep, or the session and the renderer
# will silently link two copies of the GPU context type.
blade-graphics = "=0.8.2"
blade-egui = "0.8"
blade-macros = "0.3"
egui = "0.33"
egui-winit = { version = "0.33", default-features = false }
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
glam = "0.30"
rand = "0.9"

# Until Session::with_context ships on crates.io, meganeura is consumed
# from a sibling checkout. Clone kvark/meganeura next to this repo and
# check out the matching branch.
meganeura = { path = "../meganeura" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
