[package]
name = "pong"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "mega-plays: DQN self-learning Pong."

[[bin]]
name = "pong"
path = "src/main.rs"

[dependencies]
mega-plays.workspace = true
mega-pong.workspace = true
